# tbot223-base

./: .dockerignore  .gitignore  .markdownlint.jsonc  Dockerfile  LICENSE  MANIFEST.in  README.ko.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish.yml  python-compatibility.yml
docs/: DOCSTRING_CONTRACT.md  README.md
docs/CONTRACT/: README.md
docs/CONTRACT/en/: README.md
docs/CONTRACT/en/FOR_HUMAN/: DOCSTRING_CONTRACT.md  DOCUMENTATION_CONTRACT.md
docs/CONTRACT/en/FOR_LLM/: DOCSTRING_CONTRACT.md  DOCUMENTATION_CONTRACT.md
docs/CONTRACT/ko/: README.md
docs/CONTRACT/ko/FOR_HUMAN/: DOCSTRING_CONTRACT.md  DOCUMENTATION_CONTRACT.md
docs/CONTRACT/ko/FOR_LLM/: DOCSTRING_CONTRACT.md  DOCUMENTATION_CONTRACT.md
docs/contracts/: README.md
docs/contracts/en/: README.md
docs/contracts/en/human/: api-contract.md  docstring-contract.md  documentation-contract.md
docs/contracts/en/llm/: api-contract.md  docstring-contract.md  documentation-contract.md
docs/contracts/ko/: README.md
docs/contracts/ko/human/: api-contract.md  docstring-contract.md  documentation-contract.md
docs/contracts/ko/llm/: api-contract.md  docstring-contract.md  documentation-contract.md
docs/en/: README.md  release-notes.md
docs/en/guides/: examples.md  getting-started.md  package-and-ci.md
docs/en/reference/: exception-tracker.md  result.md
docs/ko/: README.md  release-notes.md
docs/ko/guides/: examples.md  getting-started.md  package-and-ci.md
docs/ko/reference/: exception-tracker.md  result.md
examples/exception_tracker/: debug_exception_payload.py  decorator_boundary.py  public_exception_payload.py  threaded_shared_tracker.py
examples/result/: result_status_flow.py
scripts/: check-release-readiness.sh
tbot223_base/: __init__.py  exception_tracker.py  result.py  tbot223_Exception.py  tbot223_Result.py
tests/: test_exception_tracker.py  test_result.py
tests/typecheck/: public_api.py
